<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/notable_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notable_places" />
        <Button android:text="@string/startup" android:id="@+id/startup"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Button android:text="@string/shutdown" android:id="@+id/shutdown"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <CheckBox android:id="@+id/initd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initd" />
        <TextView android:id="@+id/lastLocation" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/alert" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/preview_alert" />
    </LinearLayout>
</ScrollView>
