<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />
      <EditText
        android:id="@+id/latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />
      <EditText
        android:id="@+id/longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
      <Spinner
        android:id="@+id/ringer_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ringer_mode" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">
    <Button
      android:id="@+id/done"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/done" />
    <Button
      android:id="@+id/revert"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/revert" />
  </LinearLayout>
</RelativeLayout>
 